--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.19.0",
     "react-simply-carousel": "^9.0.5",
-    "sass": "^1.69.5",
-    "yup": "^1.3.2"
+    "sass": "^1.69.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
