--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.11.3",
     "axios": "^1.6.0",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
