--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-table": "^8.11.3",
     "@hookform/resolvers": "^3.3.2",
+    "@tanstack/react-table": "^8.11.3",
     "axios": "^1.6.0",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.19.0",
     "react-simply-carousel": "^9.0.5",
+    "react-toastify": "^10.0.0",
     "sass": "^1.69.5"
   },
   "devDependencies": {
