--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@tanstack/react-table": "^8.11.3",
     "axios": "^1.6.0",
+    "js-cookie": "^3.0.5",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
