--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@siberiacancode/reactuse": "^0.0.50",
     "@tanstack/react-table": "^8.11.3",
     "axios": "^1.6.0",
     "js-cookie": "^3.0.5",
