--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@mediapipe/face_mesh": "^0.4.1633559619",
     "@supabase/supabase-js": "^2.86.0",
     "@tailwindcss/vite": "^4.1.18",
     "@xyflow/react": "^12.9.3",
@@ -23,7 +24,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
     "embla-carousel-react": "^8.6.0",
-    "immer": "^11.0.1",
+    "immer": "^11.1.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.561.0",
     "next-themes": "^0.4.6",
@@ -32,11 +33,13 @@
     "react-day-picker": "^9.12.0",
     "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.8",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.68.0",
     "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^7.10.0",
     "recharts": "^3.5.1",
     "sonner": "^2.0.7",
+    "swr": "^2.3.8",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "zod": "^4.1.13",
