--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.68.0",
     "react-resizable-panels": "^3.0.6",
-    "react-router": "^7.11.0",
+    "react-router-dom": "^7.10.0",
     "recharts": "^3.5.1",
     "sonner": "^2.0.7",
     "swr": "^2.3.8",
