--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.561.0",
     "next-themes": "^0.4.6",
+    "openai": "^6.15.0",
     "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-day-picker": "^9.12.0",
