--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@mediapipe/face_mesh": "^0.4.1633559619",
+    "@radix-ui/react-avatar": "^1.1.11",
     "@supabase/supabase-js": "^2.86.0",
     "@tailwindcss/vite": "^4.1.18",
     "@xyflow/react": "^12.9.3",
@@ -22,7 +23,6 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "dayjs": "^1.11.19",
     "embla-carousel-react": "^8.6.0",
     "immer": "^11.1.0",
     "input-otp": "^1.4.2",
@@ -43,6 +43,7 @@
     "swr": "^2.3.8",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
+    "vaul": "^1.1.2",
     "zod": "^4.1.13",
     "zustand": "^5.0.8"
   },
