--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
-    "@mediapipe/face_mesh": "^0.4.1633559619",
     "@radix-ui/react-avatar": "^1.1.11",
-    "@supabase/supabase-js": "^2.86.0",
     "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/react-query": "^5.90.21",
     "@xyflow/react": "^12.9.3",
+    "axios": "^1.13.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -28,7 +28,6 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.561.0",
     "next-themes": "^0.4.6",
-    "openai": "^6.15.0",
     "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-day-picker": "^9.12.0",
